@@ -75,7 +75,7 @@
 
 </head>
 
-<body onload="resizeResultIframe() onresize="resizeResultIframe()">
+<body onload="resizeResultIframe()" onresize="resizeResultIframe()">
 
 <!-- Add body of page here -->
 <table width="100%">
