@@ -1,6 +1,8 @@
 Revision 0.84
 ===================
+Addition of PsLDAPAuthFilter to allow user to add filters to acquisition of the user record during authentication.
 
+Separation of the disablement of authentication from authorization through the introduction of the PsLDAPEnableAuthz parameter.
 	
 Revision 0.83
 ===================
